--- a/alantree.tex
+++ b/alantree.tex
@@ -211,7 +211,8 @@ If $Y_1,\ldots,Y_d$ are $\erlang(2,1)$ random variables, then
 \begin{equation}
     \E[\min\{Y_1,\ldots,Y_d\}] = \left(\frac{2\pi+o_d(1)}{d}\right)^{1/2}  \enspace . \eqlabel{erlang-two}
 \end{equation}
-(This is a special case of a more general result that will be discussed below.)
+(TODO: Add short justification here. It's not really a special case of the one
+ below.)
 If $Z_1,\ldots,Z_d$ are $\erlang(3,1)$ random variables, then
 \begin{equation}
     \E[\min\{Z_1,\ldots,Z_d\}] = \left(\frac{C_d}{d}\right)^{1/3}  \eqlabel{erlang-three} \enspace ,
@@ -224,13 +225,13 @@ $Z$: $\Pr\{Z>z\} = \exp(-z^3/6)$, and $\E[Z]= \int_0^\infty \exp(-z^3/6)\,
 Finally, in one special case we will have random variables
 $Q_1,\ldots,Q_\delta$ where each $Q_i=X_i+Y_i$ with $X_i\sim\exponential(1)$
 and $Y_i\sim\exponential(d)$ with all $X_i$ and $Y_i$ independent.  We will need the following generalization of
-\eqref{erlang-two}:
+\eqref{erlang-two}, which holds for all $\delta \ge d \ge 5$:
 \begin{equation}
    \E[\min\{Q_1,\ldots,Q_d\}] = \frac{\sqrt{2\pi}+1}{\sqrt{\delta d}}
-     \enspace .
+     \enspace \enspace ,
      \eqlabel{non-uniform-erlang}
 \end{equation}
-Luc has promised to write this up.
+The proof of this is found in \appref{lucs-lemma}.
 
 
 
